--- a/clients/build.gradle
+++ b/clients/build.gradle
@@ -9,6 +9,7 @@ sourceSets {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.8.5'
     // Corda dependencies.
     compile "$corda_release_group:corda-rpc:$corda_release_version"
 
