--- a/frontEndClient/package.json
+++ b/frontEndClient/package.json
@@ -13,7 +13,10 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "startClient1": "PORT=3006 react-scripts start",
+    "startClient2": "PORT=3007 react-scripts start",
+    "startClient3": "PORT=3008 react-scripts start",
+    "startClient4": "PORT=3009 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
